# task_sensor_ToF

./: LICENSE  README.md
firmware/: CMakeLists.txt
firmware/components/: parse_vl53l8ch_data.py
firmware/components/vl53l8ch_driver/: CMakeLists.txt
firmware/main/: CMakeLists.txt  main.c  sensor_code.c  sensor_code.h
teste_no_computador/: CMakeLists.txt  README.md  main.c  sensor_code.c  sensor_code.h  simulador_pc
